@@ -1,6 +1,6 @@
 <?php
 // DO NOT CHANGE THIS FILE! It is automatically generated by extdeveval::buildAutoloadRegistry.
-// This file was generated on 2010-05-13 14:37
+// This file was generated on 2010-07-23 12:54
 
 $extensionPath = t3lib_extMgm::extPath('oelib');
 return array(
@@ -48,6 +48,7 @@ return array(
 	'tx_oelib_exception_database' => $extensionPath . 'Exception/class.tx_oelib_Exception_Database.php',
 	'tx_oelib_exception_emptyqueryresult' => $extensionPath . 'Exception/class.tx_oelib_Exception_EmptyQueryResult.php',
 	'tx_oelib_exception_notfound' => $extensionPath . 'Exception/class.tx_oelib_Exception_NotFound.php',
+	'tx_oelib_geocoding_calculator' => $extensionPath . 'Geocoding/Calculator.php',
 	'tx_oelib_geocoding_dummy' => $extensionPath . 'Geocoding/class.tx_oelib_Geocoding_Dummy.php',
 	'tx_oelib_geocoding_google' => $extensionPath . 'Geocoding/class.tx_oelib_Geocoding_Google.php',
 	'tx_oelib_interface_address' => $extensionPath . 'Interface/class.tx_oelib_Interface_Address.php',
@@ -124,6 +125,7 @@ return array(
 	'tx_oelib_salutationswitcherchild_testcase' => $extensionPath . 'tests/tx_oelib_salutationswitcherchild_testcase.php',
 	'tx_oelib_templatehelperchild_testcase' => $extensionPath . 'tests/tx_oelib_templatehelperchild_testcase.php',
 	'tx_oelib_testingframework_testcase' => $extensionPath . 'tests/tx_oelib_testingFramework_testcase.php',
+	'tx_oelib_geocoding_calculatortest' => $extensionPath . 'tests/Geocoding/CalculatorTest.php',
 	'tx_oelib_dummyobjecttocheck' => $extensionPath . 'tests/fixtures/class.tx_oelib_dummyObjectToCheck.php',
 	'tx_oelib_salutationswitcherchild' => $extensionPath . 'tests/fixtures/class.tx_oelib_salutationswitcherchild.php',
 	'tx_oelib_templatehelperchild' => $extensionPath . 'tests/fixtures/class.tx_oelib_templatehelperchild.php',
